# grpc_protos

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  proto-ci.yml
grpc_protos/protos/common/: common.proto
grpc_protos/protos/user_service/: user.proto
grpc_protos/services/: __init__.py
grpc_protos/services/common/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py
grpc_protos/services/user_service/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
protos/common/: common_utils.proto
scripts/: dev.py  gen_proto.py
src/grpc_protos/: __init__.py
tests/: __init__.py  conftest.py  test_grpc_connection.py  test_proto_generation.py  test_user_service.py
