[project]
name = "grpc-protos"
version = "0.1.0"
description = "gRPC service with Protocol Buffers"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
    "mypy-protobuf>=3.6.0",
    "mypy>=1.13.0",
    "protobuf>=5.29.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]
