[project]
name = "grpc-protos"
version = "0.1.0"
description = "gRPC service with Protocol Buffers"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
    "mypy-protobuf>=3.6.0",
    "mypy>=1.13.0",
    "protobuf>=5.29.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "hatchling>=1.27.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 最好时安装的时候自己执行生成脚本和格式化脚本，todo:或者先执行再将代码推上去
[tool.uv]
post-install = [
    "python grpc_protos/scripts/gen_protos.py",  # 执行你的 Protos 生成脚本
    "isort .",  # 执行 isort 来格式化代码
]